[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/components/Modal.gd" type="Script" id=1]

[node name="Modal" type="PopupDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 300
custom_constants/margin_top = 200
custom_constants/margin_left = 300
custom_constants/margin_bottom = 200

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 300.0
margin_top = 200.0
margin_right = 724.0
margin_bottom = 400.0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 417.0
margin_bottom = 193.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 394.0
margin_bottom = 170.0

[node name="ModalTitle" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 378.0
margin_bottom = 15.0
size_flags_horizontal = 3
bbcode_enabled = true
bbcode_text = "[center]Modal Title[/center]"
text = "Modal Title"
fit_content_height = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 19.0
margin_right = 378.0
margin_bottom = 23.0

[node name="ModalInfo" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 27.0
margin_right = 378.0
margin_bottom = 130.0
size_flags_vertical = 3
bbcode_enabled = true
bbcode_text = "[center]Modal Information[/center]"
text = "Modal Information"
fit_content_height = true

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 134.0
margin_right = 378.0
margin_bottom = 154.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 129.0
margin_right = 249.0
margin_bottom = 20.0

[node name="YesButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 62.0
margin_bottom = 20.0
text = "Confirm"

[node name="NoButton" type="Button" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 66.0
margin_right = 120.0
margin_bottom = 20.0
text = "Cancel"

[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/YesButton" to="." method="_on_YesButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/CenterContainer/HBoxContainer/NoButton" to="." method="_on_NoButton_pressed"]
